# FinancialFreedom-api

./: .gitignore  README.md  debug_supabase.py  env  main.py  pyproject.toml
scripts/: seed_data.py  seed_database.generated.sql  seed_database.py
src/financial_freedom_api/: __init__.py  app.py  config.py  dependencies.py  dtos.py  services.py  supabase_auth.py
src/financial_freedom_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/financial_freedom_api/routes/: __init__.py  accounts.py  auth.py  categories.py  transactions.py
supabase/: config.toml  supabase_client.py
supabase/.temp/: pooler-url  project-ref
supabase/migrations/: 20260313_budgeting_app_starter_schema.sql  20260314_schema.sql
