[project]
name = "financial-freedom-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faker>=40.11.0",
    "granian>=2.7.2",
    "httpx>=0.28.1",
    "litestar[standard]>=2.21.1",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.6",
]
